--- a/GUI/UserManagement/UserInformationGUI.form
+++ b/GUI/UserManagement/UserInformationGUI.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.UserManagement.AddUserGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.UserManagement.UserInformationGUI">
   <grid id="27dc6" binding="rootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -118,10 +118,10 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="60cdd" class="javax.swing.JButton" binding="addNewUserButton" default-binding="true">
+          <component id="60cdd" class="javax.swing.JButton" binding="confirmButton">
             <constraints/>
             <properties>
-              <text value="Add New User"/>
+              <text value="Confirm"/>
             </properties>
           </component>
           <component id="9be64" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
