--- a/GUI/VendorManagement/VendorUI.form
+++ b/GUI/VendorManagement/VendorUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VendorManagement.VendorUI">
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="10" bottom="10" right="10"/>
+    <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="470" height="209"/>
+      <xy x="20" y="20" width="485" height="239"/>
     </constraints>
     <properties>
       <background color="-8604565"/>
@@ -30,40 +30,6 @@
           <background color="-1512478"/>
           <foreground color="-16777216"/>
           <toolTipText value="search by ID or name"/>
-        </properties>
-      </component>
-      <component id="d9ab6" class="javax.swing.JLabel" binding="lblManageProfiles">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font/>
-          <foreground color="-16777216"/>
-          <text value="Manage Profiles"/>
-        </properties>
-      </component>
-      <component id="46ed8" class="javax.swing.JButton" binding="btnCreate">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Create"/>
-        </properties>
-      </component>
-      <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdate">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Update"/>
-        </properties>
-      </component>
-      <component id="1715d" class="javax.swing.JButton" binding="btnDelete">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Delete"/>
         </properties>
       </component>
       <component id="7a2cc" class="javax.swing.JButton" binding="btnGo">
@@ -99,6 +65,48 @@
         </constraints>
         <properties>
           <text value="Log Out"/>
+        </properties>
+      </component>
+      <component id="75dfc" class="javax.swing.JButton" binding="btnMainMenu">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Main Menu"/>
+        </properties>
+      </component>
+      <component id="d9ab6" class="javax.swing.JLabel" binding="lblManageProfiles">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font/>
+          <foreground color="-16777216"/>
+          <text value="Manage Profiles"/>
+        </properties>
+      </component>
+      <component id="46ed8" class="javax.swing.JButton" binding="btnCreate">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Create"/>
+        </properties>
+      </component>
+      <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdate">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Update"/>
+        </properties>
+      </component>
+      <component id="1715d" class="javax.swing.JButton" binding="btnDelete">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Delete"/>
         </properties>
       </component>
     </children>
