--- a/GUI/VendorManagement/VendorUI.form
+++ b/GUI/VendorManagement/VendorUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="485" height="239"/>
+      <xy x="20" y="20" width="535" height="214"/>
     </constraints>
     <properties>
       <background color="-8604565"/>
@@ -38,15 +38,6 @@
         </constraints>
         <properties>
           <text value="Go"/>
-        </properties>
-      </component>
-      <component id="2283b" class="javax.swing.JButton" binding="btnViewProfiles">
-        <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-          <text value="View Profiles"/>
         </properties>
       </component>
       <component id="8e3e6" class="javax.swing.JList" binding="lstDisplay">
@@ -85,14 +76,6 @@
           <text value="Manage Profiles"/>
         </properties>
       </component>
-      <component id="46ed8" class="javax.swing.JButton" binding="btnCreate">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Create"/>
-        </properties>
-      </component>
       <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdate">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -108,6 +91,29 @@
         <properties>
           <text value="Delete"/>
         </properties>
+      </component>
+      <component id="2283b" class="javax.swing.JButton" binding="btnViewProfiles">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <text value="View Profiles"/>
+        </properties>
+      </component>
+      <component id="46ed8" class="javax.swing.JButton" binding="btnCreate">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Create"/>
+        </properties>
+      </component>
+      <component id="fd0" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
