--- a/GUI/ItemManagement/ItemDisplayGUI.form
+++ b/GUI/ItemManagement/ItemDisplayGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.ItemManagement.ItemDisplayGUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="16" width="904" height="244"/>
@@ -103,6 +103,18 @@
           </component>
         </children>
       </grid>
+      <component id="51fae" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="35"/>
+            <preferred-size width="120" height="35"/>
+            <maximum-size width="120" height="35"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Logout"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
