--- a/GUI/ItemManagement/AddItemsGUI.form
+++ b/GUI/ItemManagement/AddItemsGUI.form
@@ -153,7 +153,7 @@
           </grid>
         </constraints>
         <properties>
-          <foreground color="-196618"/>
+          <foreground color="-16777216"/>
           <text value="leave"/>
         </properties>
       </component>
@@ -166,7 +166,7 @@
           </grid>
         </constraints>
         <properties>
-          <foreground color="-196618"/>
+          <foreground color="-16777216"/>
           <text value="Add Item"/>
         </properties>
       </component>
@@ -212,6 +212,7 @@
           <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16777216"/>
           <text value="Logout"/>
         </properties>
       </component>
