--- a/GUI/ItemManagement/EditItemsGUI.form
+++ b/GUI/ItemManagement/EditItemsGUI.form
@@ -153,7 +153,7 @@
           </grid>
         </constraints>
         <properties>
-          <foreground color="-196618"/>
+          <foreground color="-16777216"/>
           <text value="Leave"/>
         </properties>
       </component>
@@ -166,7 +166,7 @@
           </grid>
         </constraints>
         <properties>
-          <foreground color="-196618"/>
+          <foreground color="-16777216"/>
           <text value="Edit Item"/>
         </properties>
       </component>
@@ -213,6 +213,7 @@
           </grid>
         </constraints>
         <properties>
+          <foreground color="-16777216"/>
           <text value="Logout"/>
         </properties>
       </component>
