--- a/GUI/ItemManagement/ItemDisplayGUI.form
+++ b/GUI/ItemManagement/ItemDisplayGUI.form
@@ -82,6 +82,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16777216"/>
               <text value="Edit"/>
             </properties>
           </component>
@@ -90,6 +91,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16777216"/>
               <text value="Leave"/>
             </properties>
           </component>
@@ -98,6 +100,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="4" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16777216"/>
               <text value="Delete"/>
             </properties>
           </component>
@@ -112,6 +115,7 @@
           </grid>
         </constraints>
         <properties>
+          <foreground color="-16777216"/>
           <text value="Logout"/>
         </properties>
       </component>
