--- a/GUI/VendorManagement/VendorCreation.form
+++ b/GUI/VendorManagement/VendorCreation.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VendorManagement.VendorCreation">
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="5" bottom="5" right="5"/>
+    <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
       <xy x="20" y="20" width="532" height="389"/>
     </constraints>
@@ -98,7 +98,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
         </properties>
       </component>
@@ -109,7 +109,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
         </properties>
       </component>
@@ -120,7 +120,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
           <text value=""/>
         </properties>
@@ -132,7 +132,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
           <text value=""/>
         </properties>
@@ -144,7 +144,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
           <text value=""/>
         </properties>
@@ -154,7 +154,7 @@
           <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
         </properties>
       </component>
@@ -175,7 +175,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
         </properties>
       </component>
@@ -186,7 +186,7 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
           <text value=""/>
         </properties>
@@ -198,6 +198,7 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1"/>
           <text value=""/>
         </properties>
       </component>
