--- a/GUI/VendorManagement/VendorUI.form
+++ b/GUI/VendorManagement/VendorUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VendorManagement.VendorUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="535" height="214"/>
+      <xy x="20" y="20" width="567" height="273"/>
     </constraints>
     <properties>
       <background color="-8604565"/>
@@ -27,9 +27,9 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-1512478"/>
+          <background color="-1"/>
           <foreground color="-16777216"/>
-          <toolTipText value="search by ID or name"/>
+          <toolTipText value="Search by ID or Full Name"/>
         </properties>
       </component>
       <component id="7a2cc" class="javax.swing.JButton" binding="btnGo">
@@ -38,58 +38,6 @@
         </constraints>
         <properties>
           <text value="Go"/>
-        </properties>
-      </component>
-      <component id="8e3e6" class="javax.swing.JList" binding="lstDisplay">
-        <constraints>
-          <grid row="1" column="1" row-span="4" col-span="3" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <selectionMode value="0"/>
-        </properties>
-      </component>
-      <component id="d5a63" class="javax.swing.JButton" binding="btnLogOut">
-        <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Log Out"/>
-        </properties>
-      </component>
-      <component id="75dfc" class="javax.swing.JButton" binding="btnMainMenu">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Main Menu"/>
-        </properties>
-      </component>
-      <component id="d9ab6" class="javax.swing.JLabel" binding="lblManageProfiles">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font/>
-          <foreground color="-16777216"/>
-          <text value="Manage Profiles"/>
-        </properties>
-      </component>
-      <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdate">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Update"/>
-        </properties>
-      </component>
-      <component id="1715d" class="javax.swing.JButton" binding="btnDelete">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Delete"/>
         </properties>
       </component>
       <component id="2283b" class="javax.swing.JButton" binding="btnViewProfiles">
@@ -101,14 +49,87 @@
           <text value="View Profiles"/>
         </properties>
       </component>
-      <component id="46ed8" class="javax.swing.JButton" binding="btnCreate">
+      <component id="46ed8" class="javax.swing.JButton" binding="btnCreateProfile">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Create"/>
+          <text value="Create Profile"/>
         </properties>
       </component>
+      <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdateProfile">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Update Profile"/>
+        </properties>
+      </component>
+      <component id="1715d" class="javax.swing.JButton" binding="btnDeleteProfile">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Delete Profile"/>
+        </properties>
+      </component>
+      <component id="75dfc" class="javax.swing.JButton" binding="btnMainMenu">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Main Menu"/>
+        </properties>
+      </component>
+      <component id="d5a63" class="javax.swing.JButton" binding="btnLogOut">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Log Out"/>
+        </properties>
+      </component>
+      <grid id="4dfff" binding="pnlListBackground" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="1" row-span="6" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <scrollpane id="830eb" binding="scpDisplay">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="8e3e6" class="javax.swing.JList" binding="lstDisplay">
+                <constraints/>
+                <properties>
+                  <background color="-1"/>
+                  <enabled value="true"/>
+                  <selectionMode value="0"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="bfc0c" class="javax.swing.JList" binding="lstSearchResults">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-1"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
