--- a/GUI/VendorManagement/VendorUI.form
+++ b/GUI/VendorManagement/VendorUI.form
@@ -23,7 +23,7 @@
         <properties>
           <foreground color="-16777216"/>
           <requestFocusEnabled value="false"/>
-          <text value="Search Profiles:"/>
+          <text value="Search Vendors:"/>
         </properties>
       </component>
       <component id="4a8ab" class="javax.swing.JTextField" binding="txtSearchBar">
