--- a/GUI/MainMenu/MainMenuGUI.form
+++ b/GUI/MainMenu/MainMenuGUI.form
@@ -110,7 +110,7 @@
           <text value="Overdue Invoices Search"/>
         </properties>
       </component>
-      <component id="e0ed8" class="javax.swing.JButton" binding="purchaseOrderManagementButton" default-binding="true">
+      <component id="64514" class="javax.swing.JButton" binding="purchaseOrderManagementButton" default-binding="true">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
