--- a/GUI/VendorManagement/VendorHubGUI.form
+++ b/GUI/VendorManagement/VendorHubGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VendorManagement.VendorUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VendorManagement.VendorHubGUI">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="18" y="21" width="691" height="400"/>
@@ -8,6 +8,7 @@
     <properties>
       <autoscrolls value="false"/>
       <background color="-1118482"/>
+      <enabled value="false"/>
       <foreground color="-16777216"/>
       <inheritsPopupMenu value="false"/>
       <maximumSize width="10000" height="10000"/>
@@ -58,7 +59,7 @@
       </component>
       <component id="46ed8" class="javax.swing.JButton" binding="btnCreateProfile">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <label value="Create Vendor"/>
@@ -67,7 +68,7 @@
       </component>
       <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdateProfile">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <label value="Update Vendor"/>
@@ -76,7 +77,7 @@
       </component>
       <component id="1715d" class="javax.swing.JButton" binding="btnDeleteProfile">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <label value="Delete Vendor"/>
@@ -85,7 +86,7 @@
       </component>
       <component id="75dfc" class="javax.swing.JButton" binding="btnMainMenu">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Main Menu"/>
@@ -93,32 +94,46 @@
       </component>
       <component id="d5a63" class="javax.swing.JButton" binding="btnLogOut">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Log Out"/>
         </properties>
       </component>
-      <grid id="4dfff" binding="pnlListBackground" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4dfff" binding="pnlListBackground" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="5" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="5" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1"/>
         </properties>
         <border type="none"/>
         <children>
-          <scrollpane id="830eb" binding="scpDisplay">
+          <component id="9d6c1" class="javax.swing.JLabel" binding="lblSearchResults">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1"/>
+              <enabled value="false"/>
+              <opaque value="true"/>
+              <text value=""/>
+              <visible value="false"/>
+            </properties>
+          </component>
+          <scrollpane id="b6742" binding="scpDisplay">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1"/>
+              <opaque value="true"/>
+              <visible value="true"/>
             </properties>
             <border type="none"/>
             <children>
-              <component id="8e3e6" class="javax.swing.JList" binding="lstDisplay">
+              <component id="c742b" class="javax.swing.JList" binding="lstDisplay">
                 <constraints/>
                 <properties>
                   <background color="-1"/>
@@ -131,29 +146,17 @@
               </component>
             </children>
           </scrollpane>
-          <component id="8f63c" class="javax.swing.JLabel" binding="lblListInfo">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <autoscrolls value="false"/>
-              <text value="Name, Phone Number, Balance, Last Paid Amount, Last Order Date, Seasonal Discounts Start Date"/>
-            </properties>
-          </component>
-          <component id="bfc0c" class="javax.swing.JList" binding="lstSearchResults">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-1"/>
-              <model/>
-              <selectionMode value="0"/>
-            </properties>
-          </component>
         </children>
       </grid>
+      <component id="8ac8" class="javax.swing.JLabel" binding="lblListInfo">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <autoscrolls value="false"/>
+          <text value="Name, Phone Number, Balance, Last Paid Amount, Last Order Date, Seasonal Discounts Start Date"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
